tests/valid/program_expressions.cmt
program expressions
begin

var a : int;
var b : int;

var rel := a < b;
var arith := a + b;
var par := b * (arith);
var u_minus := -a;
var u_plus := +b;

var c : bool;
var d : bool;

var log := c || d;
var not_exp := not log;

var lit := 5;
var lit_var := lit;
var ref_lit := ref(lit);
var deref_ref_lit := deref(ref_lit)

end