tests/invalid/program_inexistent_var.cmt
program proceduress
begin

var a : int;

var arith := a + b

end